make box title font size smaller; fix naming discrepancies; resource lists are now wrapped in sections

--- a/app/assets/stylesheets/components/_box.scss
+++ b/app/assets/stylesheets/components/_box.scss
@@ -7,7 +7,7 @@
   &__title {
     display: block;
     font-weight: bold;
-    @extend .fs--xxl !optional;
+    @extend .fs--m !optional;
   }
 
   &--lighter {
